fix(frontend): shortcuts dialog not visible on fullscreen
Simplify `v-dialog` logic by introducing props for visibility
and fullscreen states. Update styles for consistent fullscreen handling.

--- a/frontend/src/styles/settings.scss
+++ b/frontend/src/styles/settings.scss
@@ -23,7 +23,7 @@ html {
   overflow: auto;
 }
 
-#search-dialog {
+.v-dialog:not(.fullscreen-active) {
   margin-top: 32px;
 
   .v-overlay__scrim {
